--- a/styles.css
+++ b/styles.css
@@ -279,6 +279,10 @@ footer{
   padding-top: 4rem;
 }
 
+.footer-text {
+  color: white;
+}
+
 @media (min-width:700px){
   nav a{padding:1.2rem 1.8rem;}
   header h1{font-size:2.5rem; animation: slideInFromLeft 1s ease forwards;}
